--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -223,6 +223,7 @@
 
     <EditText
         android:id="@+id/expText"
+        android:paddingLeft="10dp"
         android:layout_width="154dp"
         android:layout_height="38dp"
         android:layout_marginBottom="8dp"
@@ -248,6 +249,7 @@
 
     <EditText
         android:id="@+id/coinsText"
+        android:paddingLeft="10dp"
         android:layout_width="153dp"
         android:layout_height="36dp"
         android:layout_marginBottom="8dp"
