--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_alignParentStart="true"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:ignore="contentDescription"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp" />
 
@@ -41,7 +41,7 @@
         android:layout_marginTop="113dp"
         android:background="@drawable/button"
         android:onClick="startQuest"
-        android:text="Start Quest"
+        android:text="@string/startQuest"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -52,7 +52,7 @@
         android:layout_width="255dp"
         android:layout_height="65dp"
         android:background="@drawable/button"
-        android:text="Character"
+        android:text="@string/characterBtn"
         android:onClick="showCharacter"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
@@ -71,7 +71,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="21dp"
         android:background="@drawable/button"
-        android:text="Socialize"
+        android:text="@string/socialize"
         android:onClick="socialize"
         app:layout_constraintLeft_toLeftOf="@+id/backgroundPicture"
         app:layout_constraintRight_toRightOf="parent"
@@ -85,7 +85,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button"
-        android:text="Achievements"
+        android:text="@string/achievements"
         android:onClick="showAchievements"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -107,7 +107,7 @@
         android:background="@drawable/information"
         android:layout_width="41dp"
         android:layout_height="41dp"
-        android:layout_marginLeft="98dp"
+        android:layout_marginStart="98dp"
         android:layout_marginTop="95dp"
         android:onClick="readStory"
         app:layout_constraintLeft_toLeftOf="parent"
