--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,8 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="113dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="116dp" />
 
     <Button
         android:id="@+id/characterBtn"
@@ -86,19 +87,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/settings_small"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnInfo"
-        android:layout_width="41dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="98dp"
-        android:layout_marginTop="95dp"
-        android:background="@drawable/information"
-        android:onClick="readStory"
-        app:layout_constraintHorizontal_bias="0.82"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
