--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -41,6 +41,7 @@
 
                 <ImageView
                     android:id="@+id/swordCheck"
+                    android:visibility="invisible"
                     android:layout_width="31dp"
                     android:layout_height="29dp"
                     android:layout_alignBottom="@id/sword"
@@ -68,6 +69,7 @@
 
             <ImageView
                 android:id="@+id/shieldCheck"
+                android:visibility="invisible"
                 android:layout_width="31dp"
                 android:layout_height="29dp"
                 android:layout_alignBottom="@id/shield"
@@ -102,6 +104,7 @@
 
             <ImageView
                 android:id="@+id/armorCheck"
+                android:visibility="invisible"
                 android:layout_width="31dp"
                 android:layout_height="29dp"
                 android:layout_alignBottom="@id/armor"
