--- a/app/src/main/res/layout/activity_choose_world.xml
+++ b/app/src/main/res/layout/activity_choose_world.xml
@@ -135,16 +135,17 @@
 
         <Button
             android:id="@+id/btnInfo"
-            android:layout_width="41dp"
-            android:layout_height="41dp"
+            android:layout_width="50dp"
+            android:layout_height="46dp"
             android:layout_marginLeft="98dp"
             android:layout_marginTop="85dp"
-            android:background="@drawable/information"
+            android:background="@drawable/book"
             android:onClick="readTheRoadStory"
             app:layout_constraintHorizontal_bias="0.819"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteY="80dp" />
 
     </android.support.constraint.ConstraintLayout>
 
