--- a/app/src/main/res/layout/activity_item_reward.xml
+++ b/app/src/main/res/layout/activity_item_reward.xml
@@ -8,21 +8,39 @@
     tools:context="com.example.zeltr.codehero.ItemReward">
 
     <ImageView
+        android:id="@+id/imgKapow"
+        android:layout_width="253dp"
+        android:layout_height="194dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/kapow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.425" />
+
+    <ImageView
         android:id="@+id/imgReward"
         android:layout_width="253dp"
         android:layout_height="194dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtComplete"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintVertical_bias="0.032" />
+        app:layout_constraintVertical_bias="0.425"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnNext"
@@ -30,13 +48,13 @@
         android:layout_height="65dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="27dp"
         android:background="@drawable/button"
         android:onClick="btnNext"
         android:text="Next"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="9dp"
         app:layout_constraintTop_toBottomOf="@+id/txtItemDesc" />
 
     <TextView
@@ -45,7 +63,6 @@
         android:layout_height="64dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="12dp"
         android:clickable="false"
         android:cursorVisible="false"
         android:ems="10"
@@ -57,7 +74,8 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgReward" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="340dp" />
 
     <TextView
         android:id="@+id/txtComplete"
