--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/background">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="207dp"
         android:layout_height="70dp"
         android:layout_alignParentStart="true"
@@ -87,6 +88,19 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/settings_small"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnInfo"
+        android:layout_width="50dp"
+        android:layout_height="46dp"
+        android:layout_marginLeft="98dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/book"
+        android:onClick="readStory"
+        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
