--- a/app/src/main/res/layout/activity_choose_world.xml
+++ b/app/src/main/res/layout/activity_choose_world.xml
@@ -99,6 +99,7 @@
             android:layout_height="50dp"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
+            android:onClick="settingsClicked"
             android:background="@drawable/settings_small"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
